# Fursuit-control-Webapi

./: .gitignore  Readme.md  pyproject.toml
fursuitwebapi/: __main__.py  app.py
fursuitwebapi/api/: modulecontrol.py  routes.py
fursuitwebapi/utils/: Consts.py
fursuitwebapi/utlis/: Consts.py  consolelog.py
