[tool.poetry]
name = "fursuitwebapi"
version = "0.1.0"
description = ""
authors = ["Nicholasb"]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.5"
Flask = "^2.2.2"
flasgger = "^0.9.5"
Flask-SQLAlchemy = "^2.5.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
